Circle percentage resizing issues seen on smaller screens - addressing with media queries for now.

--- a/src/components/percentage.css
+++ b/src/components/percentage.css
@@ -3,18 +3,72 @@
     margin: 10px auto;
     max-width: 80%;
     max-height: 250px;
-  }
-  
-  .circle {
+}
+
+.circle {
     stroke: #4CC790;
     fill: none;
     stroke-width: 2.8;
     stroke-linecap: round;
     animation: progress 1s ease-out forwards;
-  }
-  
-  @keyframes progress {
-    0% {
-      stroke-dasharray: 0 100;
+}
+
+.circle-percentage-transform {
+
+    transform: translate(-50%, -220%);
+
+    @media screen and (max-width: 700px) {
+        transform: translate(-50%, -215%);
     }
-  }
+
+    @media screen and (max-width: 700px) {
+        transform: translate(-50%, -200%);
+    }
+
+    @media screen and (max-width:650px) {
+        transform: translate(-50%, -190%);
+    }
+
+    @media screen and (max-width:600px) {
+        font-size: 1rem !important;
+        transform: translate(-50%, -210%);
+    }
+
+    @media screen and (max-width:600px) {
+        transform: translate(-50%, -210%);
+    }
+
+    @media screen and (max-width:550px) {
+        transform: translate(-50%, -200%);
+    }
+
+    @media screen and (max-width:500px) {
+        transform: translate(-50%, -185%);
+    }
+
+    @media screen and (max-width:450px) {
+        font-size: 0.9rem !important;
+        transform: translate(-50%, -185%);
+    }
+
+    @media screen and (max-width:400px) {
+        font-size: 0.8rem !important;
+        transform: translate(-50%, -195%);
+    }
+
+    @media screen and (max-width:375px) {
+        font-size: 0.7rem !important;
+        transform: translate(-50%, -200%);
+    }
+
+    @media screen and (max-width:350px) {
+        font-size: 0.65rem !important;
+        transform: translate(-50%, -200%);
+    }
+}
+
+@keyframes progress {
+    0% {
+        stroke-dasharray: 0 100;
+    }
+}
